src/test/ui/const-generics/const-arg-in-const-arg.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:14:23
   |
LL |     let _: [u8; foo::<T>()];
   |                       ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:15:23
   |
LL |     let _: [u8; bar::<N>()];
   |                       ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:25:23
   |
LL |     let _ = [0; bar::<N>()];
   |                       ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:30:24
   |
LL |     let _: Foo<{ foo::<T>() }>;
   |                        ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:31:24
   |
LL |     let _: Foo<{ bar::<N>() }>;
   |                        ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:36:27
   |
LL |     let _ = Foo::<{ foo::<T>() }>;
   |                           ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:37:27
   |
LL |     let _ = Foo::<{ bar::<N>() }>;
   |                           ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:16:23
   |
LL |     let _: [u8; faz::<'a>(&())];
   |                       ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:17:23
   |
LL |     let _: [u8; baz::<'a>(&())];
   |                       ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:18:23
   |
LL |     let _: [u8; faz::<'b>(&())];
   |                       ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:19:23
   |
LL |     let _: [u8; baz::<'b>(&())];
   |                       ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:26:23
   |
LL |     let _ = [0; faz::<'a>(&())];
   |                       ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:27:23
   |
LL |     let _ = [0; baz::<'a>(&())];
   |                       ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:28:23
   |
LL |     let _ = [0; faz::<'b>(&())];
   |                       ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:29:23
   |
LL |     let _ = [0; baz::<'b>(&())];
   |                       ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:32:24
   |
LL |     let _: Foo<{ faz::<'a>(&()) }>;
   |                        ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:33:24
   |
LL |     let _: Foo<{ baz::<'a>(&()) }>;
   |                        ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:34:24
   |
LL |     let _: Foo<{ faz::<'b>(&()) }>;
   |                        ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:35:24
   |
LL |     let _: Foo<{ baz::<'b>(&()) }>;
   |                        ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:38:27
   |
LL |     let _ = Foo::<{ faz::<'a>(&()) }>;
   |                           ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:39:27
   |
LL |     let _ = Foo::<{ baz::<'a>(&()) }>;
   |                           ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:40:27
   |
LL |     let _ = Foo::<{ faz::<'b>(&()) }>;
   |                           ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/const-arg-in-const-arg.rs:41:27
   |
LL |     let _ = Foo::<{ baz::<'b>(&()) }>;
   |                           ^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error: aborting due to 23 previous errors

For more information about this error, try `rustc --explain E0658`.
